<resources>
    <!--Login-->
    <string name="app_name">ShoeStore</string>
    <string name="email_text_view">Email</string>
    <string name="password_text_view">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error">Username or Password error</string>
    <string name="create_account_button">Create an account</string>

    <!--Onboarding-->
    <string name="welcome_text_view">Welcome</string>
    <string name="welcome_subtitle_text_view">Click next to read the instructions</string>
    <string name="next_button">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Guide-->
    <string name="instructions_text_view">1. Click start button to see shoes.\n2. You can use the menu to logout. \n3. You can add new shoes. Just click the bottom at the bottom right corner of the screen.</string>
    <string name="instructions_title_text_view">Instructions</string>
    <string name="start_button">Start</string>
    <string name="logout_menu_item">Logout</string>

    <!--Shoe List-->
    <string name="string_value">%s %s</string>
    <string name="name_label">Name:</string>
    <string name="company_label">Company:</string>
    <string name="size_label">Size:</string>
    <string name="description_label">Description:</string>
    <string name="double_value">%s %.1f</string>

    <!--Shoe Detail-->
    <string name="name_edit_text_hint">Please type the shoe name</string>
    <string name="company_edit_text_hint">Please type the company name</string>
    <string name="size_edit_text_hint">Please type the shoe size</string>
    <string name="description_edit_text_hint">Please type a description</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

</resources>